<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"

        android:layout_height="match_parent"
        android:background="@color/background_light"
        android:clickable="true"
        android:focusable="true">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.55" />

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rectangle1"
                tools:ignore="ContentDescription" />


        </RelativeLayout>


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.35" />

        <LinearLayout

            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="34dp"
            android:layout_marginEnd="34dp"
            android:layout_marginBottom="42dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2">

            <com.google.android.material.card.MaterialCardView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="22dp"

                android:paddingBottom="22dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="22dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:gravity="center"
                        android:text="@string/login_to_account"
                        android:textColor="@color/color_title"
                        android:textSize="@dimen/titleIntroSize"
                        android:textStyle="bold"
                        tools:ignore="SpUsage" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/use_features"
                        android:textColor="@color/less_normal_color"
                        android:textSize="@dimen/less_normal_size"
                        tools:ignore="SpUsage" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/enter_phone"
                        android:textColor="@color/less_normal_color"
                        android:textSize="@dimen/less_normal_size"
                        tools:ignore="SpUsage" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText

                            android:id="@+id/edt_number"
                            android:layout_width="match_parent"
                            android:layout_height="46dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginBottom="16dp"
                            android:background="@drawable/shape_edittext"
                            android:drawableRight="@drawable/phone"
                            android:drawablePadding="6dp"
                            android:fontFamily="@font/iransans"
                            android:gravity="center"
                            android:hint="@string/phone"
                            android:inputType="number"
                            android:maxLength="11"
                            android:padding="8dp"
                            android:textColor="@color/color_title"
                            android:textColorHint="#C5C5C5"
                            android:textSize="@dimen/less_large_size"
                            tools:ignore="Autofill,RtlHardcoded,SpUsage" />

                        <ProgressBar
                            android:id="@+id/progressBar"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="32dp"
                            android:visibility="gone" />

                    </RelativeLayout>

                    <LinearLayout
                        android:id="@+id/layoutRule"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/btn_login"
                        android:layout_centerHorizontal="true"
                        android:layout_marginLeft="2dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="2dp"
                        android:gravity="center|center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:text="@string/rule2"
                            android:id="@+id/login_tv_rules2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/normal_color"
                            android:textSize="11dp" />

                        <TextView
                            android:layout_marginLeft="2dp"
                            android:text="@string/rule1"
                            android:id="@+id/login_tv_rules1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/normal_color"
                            android:textSize="11dp" />


                        <CheckBox
                            android:id="@+id/checkbox"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_marginLeft="1dp"
                            android:checked="true" />


                    </LinearLayout>


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnEnter"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_marginStart="22dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="22dp"
                        android:fontFamily="@font/iransans"
                        android:text="@string/login_to_account"
                        android:textColor="@color/normal_color"
                        android:textSize="@dimen/less_normal_size"
                        android:textStyle="bold"
                        app:cornerRadius="22dp" />
                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>


        <View
            android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

       <!-- <TextView

            android:id="@+id/login_tv_app_name"
            style="@style/textNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="@dimen/very_large"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout2" />-->

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:scaleType="centerInside"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
            app:srcCompat="@drawable/ic_logo"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:textColor="@color/color_title"
            android:textSize="@dimen/normalTextSize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            tools:ignore="SpUsage" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
